2010-06-22	Jennifer Averett <Jennifer.Averett@OARcorp.com>

	* Makefile.am, configure.ac: Added test that attempts to free stack
	memory. This causes a error to be printed from the free function.
	* malloc03/.cvsignore, malloc03/Makefile.am, malloc03/init.c,
	malloc03/malloc03.doc, malloc03/malloc03.scn: New files.

2010-06-22	Jennifer Averett <Jennifer.Averett@OARcorp.com>

	* malloctest/init.c: Added error case with malloc of size 0.

2010-06-22	Jennifer Averett <Jennifer.Averett@OARcorp.com>

	* malloctest/init.c: Added test to check failure branch on calloc.

2010-06-21	Joel Sherrill <joel.sherrill@oarcorp.com>

	* malloc02/init.c, malloc02/malloc02.doc: Enable malloc dirty helper.

2010-06-21	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am, configure.ac: Add test for deferring free() from ISR and
	for deferred free() processing.
	* malloc02/.cvsignore, malloc02/Makefile.am, malloc02/init.c,
	malloc02/malloc02.doc, malloc02/malloc02.scn: New files.

2010-06-07	Joel Sherrill <joel.sherrill@oarcorp.com>

	* termios01/init.c, termios01/termios01.scn, termios02/init.c,
	termios02/termios02.scn: Add tests for cfigetspeed(), cfogetspeed(),
	cfisetspeed(), cfosetspeed(), ctermid(), tcflow(), tcflush(),
	tcsendbreak(), tcsetpgrp(), and tcgetpgrp(). Some of these methods
	are minimal implementations so the tests will have to grow as the
	methods grow.

2010-06-07	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* heapwalk/init.c, malloctest/init.c: Update for heap extend changes.

2010-05-17	Sebastian Huber <sebastian.huber@embedded-brains.de>

	PR 1433/cpukit
	* block08/bdbuf_tests.c: Enabled tests 1.1, 1.2 and 1.3.
	* block08/bdbuf_test1_1.c, block08/bdbuf_test1_2.c,
	block08/bdbuf_test1_3.c: Use RTEMS_IO_ERROR instead of
	RTEMS_NO_MEMORY.

2010-05-03	Sebastian Huber <Sebastian.Huber@embedded-brains.de>

	* block01/init.c, block02/init.c, block03/init.c, block04/init.c,
	block05/init.c, block06/init.c, block07/init.c, block09/init.c,